[package]
name = "cargo-nuget"
version = "0.1.1"
authors = ["Ryan Levick <ryan.levick@gmail.com>", "buj"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.22.1"
futures = "0.3.31"
reqwest = "0.12.15"
tokio = { version = "1.45.0", features = ["rt"] }
zip = "2.6.1"
