[package]
name = "cargo-nuget"
version = "0.2.0"
authors = ["Ryan Levick <ryan.levick@gmail.com>", "buj"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "*"
futures = "^0.3"
reqwest = "*"
tokio = { version = "1.*", features = ["rt"] }
zip = "^2.6"
